--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
             text-align: center;
         }
         .validation-error {
-            display: none; /* Başlangıçta hata mesajlarını gizle */
+            display: none;
         }
     </style>
 </head>
