get fetch added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -76,9 +76,9 @@
         <button type="button" class="btn btn-primary my-3" id="kjopBillet" onclick="addBillett()">Kjøp billett</button>
 
         <h3 class="my-3">Alle billetter</h3>
-        <div id="alleBilletter"></div>
+        <div id="ticketList"></div>
 
-        <button type="button" class="btn btn-danger my-3" onclick="slettAlleBilletter()" id="slettBillet">Slett alle billettene</button>
+        <button type="button" class="btn btn-danger my-3" onclick="deleteTicket()" id="slettBillet">Slett alle billettene</button>
     </form>
 </div>
 </body>
