delete func added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -78,7 +78,7 @@
         <h3 class="my-3">Alle billetter</h3>
         <div id="ticketList"></div>
 
-        <button type="button" class="btn btn-danger my-3" onclick="deleteTicket()" id="slettBillet">Slett alle billettene</button>
+        <button type="button" class="btn btn-danger my-3" onclick="deleteAllTickets()" id="slettBillet">Slett alle billettene</button>
     </form>
 </div>
 </body>
